[REFACTOR] GetSearchedHomeworkController 에서 RequestDto로 받는 것으로 수정 - 파라미터를 받는 것이 아닌, RequestDto를 받는 것으로 수정 - 유효성 검증을 RequestDto에서 하기때문에 command 삭제 - command 삭제에 따른 GetSearchedHomeworkServiceTest 수정