@@ -1,5 +1,7 @@
 package com.noti.noti.homework.adapter.in.web.dto.response;
 
+import com.noti.noti.homework.application.port.in.InSearchedPageDto;
+import com.noti.noti.homework.application.port.in.InSearchedPageDto.InSearchedHomework;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.ArrayList;
@@ -10,14 +12,17 @@ import lombok.Getter;
 public class SearchedPageDto {
 
   private String nextCursorId;
-  private List<SearchedHomework> searchedHomeworks = new ArrayList<>();
+  private List<SearchedHomeworkDto> searchedHomeworks = new ArrayList<>();
+  private boolean last;
 
-  public SearchedPageDto(List<com.noti.noti.homework.application.port.out.SearchedHomework> searchedHomeworks) {
-    this.nextCursorId = searchedHomeworks.get(searchedHomeworks.size() - 1).getCursorId();
-    searchedHomeworks.forEach(s -> this.searchedHomeworks.add(new SearchedHomework(s)));
+  public SearchedPageDto(InSearchedPageDto inSearchedPageDto) {
+    this.nextCursorId = inSearchedPageDto.getNextCursorId();
+    this.last = inSearchedPageDto.getLast();
+    inSearchedPageDto.getSearchedHomeworks()
+        .forEach(in -> this.searchedHomeworks.add(new SearchedHomeworkDto(in)));
   }
 
-  private class SearchedHomework {
+  private class SearchedHomeworkDto {
 
     private String homeworkName;
     private String lessonName;
@@ -25,13 +30,12 @@ public class SearchedPageDto {
     private LocalTime endTime;
     private LocalDate startDate;
 
-    public SearchedHomework(
-        com.noti.noti.homework.application.port.out.SearchedHomework searchedHomework) {
-      this.homeworkName = searchedHomework.getHomeworkName();
-      this.lessonName = searchedHomework.getLessonName();
-      this.startTime = searchedHomework.getStartTime();
-      this.endTime = searchedHomework.getEndTime();
-      this.startDate = searchedHomework.getStartDate().toLocalDate();
+    public SearchedHomeworkDto(InSearchedHomework in) {
+      this.homeworkName = in.getHomeworkName();
+      this.lessonName = in.getLessonName();
+      this.startTime = in.getStartTime();
+      this.endTime = in.getEndTime();
+      this.startDate = in.getStartDate();
     }
 
   }
